# pd-compose

./: .dockerignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pd-compose.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
refs/tags/: v0.3.0
src/pd_compose/: __main__.py  cli.py
src/pd_compose.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py
