[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pd-compose"
version = "0.3.0"
description = "A minimal compose-like tool for proot-distro"
readme = "README.md"
license = "MIT"
authors = [{name = "aleguacaran"}]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9",
    "pyyaml>=6.0",
    "proot-distro",
]
keywords = ["termux", "proot-distro", "proot", "container"]

[project.urls]
Homepage = "https://github.com/aleguacaran/pd-compose"

[project.scripts]
pd-compose = "pd_compose.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
